Added tooltip to food containers

--- a/src/main/resources/assets/solsweetpotato/lang/en_us.json
+++ b/src/main/resources/assets/solsweetpotato/lang/en_us.json
@@ -17,6 +17,8 @@
     "item.solsweetpotato.container.golden_lunchbox": "Golden Lunchbox",
 	"item.solsweetpotato.lunchbag": "Lunchbag",
 	"item.solsweetpotato.container.lunchbag": "Lunchbag",
+	
+	"item.solsweetpotato.container.open": "Shift rightclick to open",
 
 	"key.solsweetpotato.open_food_book": "Open Food Book",
 	"key.solsweetpotato.category": "Spice of Life: Potato Edition",
