--- a/src/main/resources/assets/solonion/lang/zh_cn.json
+++ b/src/main/resources/assets/solonion/lang/zh_cn.json
@@ -11,16 +11,16 @@
 	"item.solonion.food_book": "食物清单",
 	"item.solonion.lunchbox": "午餐盒",
 	"item.solonion.container.lunchbox": "午餐盒",
-    "item.solonion.golden_lunchbox": "黄金午餐盒",
-    "item.solonion.container.golden_lunchbox": "黄金午餐盒",
+	"item.solonion.golden_lunchbox": "黄金午餐盒",
+	"item.solonion.container.golden_lunchbox": "黄金午餐盒",
 	"item.solonion.lunchbag": "午餐袋",
 	"item.solonion.container.lunchbag": "午餐袋",
-	
+
 	"item.solonion.container.open": "手持物品并Shift右键打开",
 
 	"key.solonion.open_food_book": "打开食物清单",
 	"key.solonion.category": "生活调味料：洋葱版",
-	
+
 	"gui.solonion.food_book.stats": "总览",
 	"gui.solonion.food_book.stats.current_diversity": "当前饮食多样性",
 	"gui.solonion.food_book.stats.min_warning1": "需额外进食%d次",
@@ -35,14 +35,20 @@
 
 	"gui.solonion.food_book.fraction": "%1$s/%2$s",
 
-    "gui.solonion.tooltip.disabled": "这种食物无法用以丰富饮食多样性。",
+	"gui.solonion.tooltip.disabled": "这种食物无法用以丰富饮食多样性。",
 	"gui.solonion.tooltip.diversity": "饮食多样性变化",
 	"gui.solonion.tooltip.last_eaten": "最后食用于：%d餐前",
 	"gui.solonion.tooltip.last_eaten_singular": "最后食用于：%d餐前",
-	
-	"config.solonion.attribute": "特性",
-	"config.solonion.effect": "怪物效果",
-	
+
+	"config.solonion.attribute": "自身属性",
+	"config.solonion.effect": "状态效果",
+
 	"config.solonion.trackCount.comment": "有多少种食物会被记录\n如果你要自定义上列的阈值/增益的话\n那么请注意，该值越大，相应的的饮食多样性数值也会增大，请仔细考虑。",
-    "config.solonion.minFoodsToActivate.comment": "玩家在获得任意增益前需要吃的最小食物种类数值。"
+	"config.solonion.minFoodsToActivate.comment": "玩家在获得任意增益前需要吃的最小食物种类数值。",
+
+	"config.solonion.complexityStandardNutrition.comment": "这是默认情况下面包所回复的饥饿值。\n每种食物都为和其作比较并因此而计算回复的饥饿值。",
+	"config.solonion.complexityStandardSaturation.comment": "这是默认情况下面包所回复的饱食度。\n每种食物都为和其作比较并因此而计算回复的饱食度。",
+	"config.solonion.complexityBenefitEffectModifier.comment": "食物所带来的每个正面效果（包括等级）的复杂度系数为多少。\n会考虑效果的产生几率。",
+	"config.solonion.complexityNeutralEffectModifier.comment": "食物所带来的每个正面效果（包括等级）的复杂度系数为多少。\n会考虑效果的产生几率。",
+	"config.solonion.complexityHarmEffectModifier.comment": "食物所降低多样性的复杂度系数为多少。\n会考虑效果的产生几率。"
 }
