--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+1.2.1
+Adapted to CreativeCore Iterable changes
+
 1.2.0
 Added automatic calculation of food diversity based on nutrition, saturation and mob effects (suggested by NanoAi)
 
