--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+1.2.4
+Fixed drinking milk removing all beneficial effects
+
 1.2.3
 Added OnionFoodContainer interface
 Fixed lunchbox incorrect tooltip
