--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+1.2.9
+Fixed tooltip of food container not showing actual keybinds
+Adapted CreativeCore changes 2.12.3
+
 1.2.8
 Adapted CreativeCore 2.12.0 changes
 
