--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+1.2.10
+Fixed not removing benefit mob effects when going under the threshold again
+Fixed lunchboxes not saving and loading inventory
+
 1.2.9
 Fixed tooltip of food container not showing actual keybinds
 Adapted CreativeCore changes 2.12.3
