--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+1.4.0
+Added ability to fill food bag, lunchbox, etc. with food when shift right clicking on item container such like chests
+
 1.3.1
 Fixed recipe, tag and advancement not working
 
