--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+1.2.11
+Added ability to fill food bag, lunchbox, etc. with food when shift right clicking on item container such like chests
+
 1.2.10
 Fixed not removing benefit mob effects when going under the threshold again
 Fixed lunchboxes not saving and loading inventory
