--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+1.4.1
+Reworked benefit system
+Added operation type to attribute benefit
+
 1.2.11
 Added ability to fill food bag, lunchbox, etc. with food when shift right clicking on item container such like chests
 
