--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+1.4.2
+Fixed not consuming stack when eating out of lunchbox
+
 1.4.1
 Fixed not merging added stacks properly when using fill ability of lunchbox
 
