--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+1.4.3
+Fixed not keeping benefits even when reset on death is set to false
+
 1.4.2
 Fixed not consuming stack when eating out of lunchbox
 
