--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+1.4.4
+Fixed not getting benefits even if reset on death is set to false (you had to login or eat to get them again)
+
 1.4.3
 Fixed not keeping benefits even when reset on death is set to false
 
