Added button to inventory to check stats (remove need for book) inspired by Diet mod

--- a/src/main/resources/assets/solonion/lang/en_us.json
+++ b/src/main/resources/assets/solonion/lang/en_us.json
@@ -40,6 +40,9 @@
 	"gui.solonion.tooltip.last_eaten": "Last eaten: %d meals ago",
 	"gui.solonion.tooltip.last_eaten_singular": "Last eaten: %d meal ago",
 	
+	"gui.solonion.inventory.button": "SOL",
+	"gui.solonion.inventory.tooltip": "SOL Onion Stats\nDiversity: %s",
+	
 	"config.solonion.att": "Attribute",
 	"config.solonion.eff": "Mob Effect",
 	
