--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+1.4.6
+Added button to inventory to check stats (remove need for book) inspired by Diet mod
+Fixed crash when removing and readding this mod again
+
 1.4.5
 Fixed crash when food properties pass null mobeffectinstance (caused crash with create garnished)
 
