--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+1.4.7
+Added new textures made by davka
+Fixed wrong usage of sorting lists
+
 1.4.6
 Added button to inventory to check stats (remove need for book) inspired by Diet mod
 Fixed crash when removing and readding this mod again
